@@ -1,5 +1,11 @@
 2010-03-22  Miloslav Trmač  <mitr@redhat.com>
 
+	* configure.ac: Check if fuser supports -s.
+	* tmpwatch.c (check_fuser): Redirect stdout and stderr instead of using
+	-s if !FUSER_ACCEPTS_S.
+	All based on a patch by Ben Walton <bwalton@artsci.utoronto.ca>
+	(FUSER_ARGS): Remove, simply use "-s" directly.
+
 	* configure.ac: Search for fuser, check if it works.  Define FUSER.
 	* tmpwatch.c: Remove FUSER_PATH.  Replace all uses with FUSER.
 	(check_fuser): Just #define to 0 if !FUSER.
